--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,7 @@
 
 body {
     background-color: #ffc100;
-
+   
 }
 img {
     margin-left: 450px;
@@ -12,6 +12,7 @@ h1 {
     font-family: 'Press Start 2P', cursive;
     font-size: 70px;S
 }
+
 .container {
     display: flex;
     align-items: center;
@@ -80,10 +81,17 @@ button {
 }
 
 footer {
-   background: #757372;
-   position: sticky;
-   margin:0;
-    bottom:0;
+    background: #565557;
+    width: 100%;
+    box-sizing: border-box;
+    display: block;
+    position: relative;
+    height: 100%;
+    margin-bottom: -100px;
+    clear: both;
+    padding-top: 28px;
+    padding-bottom: 28px;
+   
 }
 
 
